--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,8 @@ jobs:
   spotless:
     name: Spotless apply
     runs-on: ubuntu-latest
-    - uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - uses: actions/setup-java@v4
@@ -19,3 +20,14 @@ jobs:
           distribution: 'zulu'
           java-version: 17
       - run: ./gradlew spotlessApply
+  
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: 17
+      - run: ./gradlew test
