--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,13 +22,11 @@ jobs:
       - name: Run spotlessApply
         run: ./gradlew spotlessApply
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          commit-message: 'style: format code with spotless'
-          title: 'style: format code with spotless'
-          body: 'Applied code formatting using spotless'
-          branch: format-code
-          delete-branch: true
+        run: |
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git commit -am "Spotless Format"
+          git push
   
   test:
     name: Run Tests
