--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,9 +23,9 @@ jobs:
         run: ./gradlew spotlessApply || true
       - name: Create Pull Request
         run: |
-          git config user.name 'github-actions[bot]'
-          git config user.email 'github-actions[bot]@users.noreply.github.com'
-          git commit -am "Spotless Format"
+          git config user.name 'github-actions[bot]' || true
+          git config user.email 'github-actions[bot]@users.noreply.github.com' || true
+          git commit -am "Spotless Format" || true
           git push || true
   
   test:
