--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,8 +8,8 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  test:
-    name: Run Tests
+  build:
+    name: Run Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,4 +17,6 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: 17
-      - run: ./gradlew test
+      - run: ./gradlew build
+    
+
