--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,5 @@ compile_commands.json
 
 # Version file
 src\main\java\frc\robot\BuildConstants.java
+
+src/main/java/frc/robot/BuildConstants.java
