--- a/build.gradle
+++ b/build.gradle
@@ -72,9 +72,11 @@ spotless {
         toggleOffOn()
         googleJavaFormat()
         removeUnusedImports()
+        importOrder('java', 'javax', 'org', 'com', 'edu', 'frc', '')
         trimTrailingWhitespace()
         endWithNewline()
-        // licenseHeader("// Copyright (c) FIRST and other WPILib contributors.\n// Open Source Software; you can modify and/or share it under the terms of\n// the WPILib BSD license file in the root directory of this project.\n\n")
+
+        licenseHeader("// Copyright (c) FIRST and other WPILib contributors.\n// Open Source Software; you can modify and/or share it under the terms of\n// the WPILib BSD license file in the root directory of this project.\n\n")
     }
     groovyGradle {
         target fileTree('.') {
